Update WEB Contant

--- a/public/projects/project11/index.html
+++ b/public/projects/project11/index.html
@@ -165,12 +165,31 @@
   </div>
 </div>
 <div class="not-prose" 
-     style="display: flex; gap: 1rem; margin: 1rem auto; width: 100%; justify-content: center;">
+     style="display: flex; gap: 1rem; margin: 1rem auto; width: 80%; justify-content: center;">
   <div style="flex: 1; text-align: center;">
-    <img src="/images/pj11-9.webp" alt="Dashboard" style="width:100%; border-radius: 4px;" />
+    <img src="/images/pj11-9.webp" alt="Dashboard" style="width:100%; border-radius: 8px;" />
+    <p style="color: gray; font-style: italic; font-size: 0.875rem; margin-top: 0.5rem; text-align: center;">
+      Figure 1. Site Plan
   </div>
   <div style="flex: 1; text-align: center;">
-    <img src="/images/pj11-10.webp" alt="Dashboard" style="width:100%; border-radius: 4px;" />
+    <img src="/images/pj11-10.webp" alt="Dashboard" style="width:100%; border-radius: 8px;" />
+    <p style="color: gray; font-style: italic; font-size: 0.875rem; margin-top: 0.5rem; text-align: center;">
+      Figure 2. Explored View
+    </p>
+  </div>
+</div>
+<div class="not-prose" 
+     style="display: flex; gap: 1rem; margin: 1rem auto; width: 80%; justify-content: center;">
+  <div style="flex: 1; text-align: center;">
+    <img src="/images/pj11-2.webp" alt="Dashboard" style="width:100%; border-radius: 8px;" />
+    <p style="color: gray; font-style: italic; font-size: 0.875rem; margin-top: 0.5rem; text-align: center;">
+      Figure 3. Lobby Launge
+  </div>
+  <div style="flex: 1; text-align: center;">
+    <img src="/images/pj11-4.webp" alt="Dashboard" style="width:100%; border-radius: 8px;" />
+    <p style="color: gray; font-style: italic; font-size: 0.875rem; margin-top: 0.5rem; text-align: center;">
+      Figure 4. Interior View
+    </p>
   </div>
 </div>
 <p><img src="/images/pj11-11.webp" alt="Dashboard"></p>
