Update WEB Contant

--- a/public/projects/project6/index.html
+++ b/public/projects/project6/index.html
@@ -180,11 +180,11 @@
 <h2 id="constraints-integration-with-speckle">Constraints Integration with Speckle</h2>
 <p>The model is connected to the Speckle platform, a collaborative data hub that enables real-time exchange across different BIM tools. Similar to GitHub for AEC data, Speckle supports version control and structured data management, allowing designers, manufacturers, and MEP stakeholders to add and synchronize constraints seamlessly.<br>
 <img src="/images/pj6-9.webp" alt="Dashboard">
-<em>Figure 4. The process of data storage and reconstruction in Speckle.</em></p>
+<em>Figure 4. The process of data storage and reconstruction in Speckle (sourced from Speckle Docs)</em></p>
 <h2 id="revit-plug-in-as-prototype">Revit Plug-In as Prototype</h2>
 <p>We built a Python-based Revit plug-in using pyRevit to implement the Constraint Design model. One function converts design entities into bounding-box models for constraint integration via Speckle, while the other retrieves and visualizes modified constraints directly in Revit through the Speckle API and uses GraphQL (Graph Query Language) to query from structured data, and employs Python&rsquo;s Json API to retrieve data from the web interface and return it to the plugin script. This enables real-time collaboration between designers and manufacturers.
 <img src="/images/pj6-11.webp" alt="Dashboard">
-<em>Figure 5. The process of data storage and reconstruction in Speckle.</em></p>
+<em>Figure 5. The process of data storage and reconstruction in Speckle (sourced from Speckle Docs)</em></p>
 <h2 id="application-scenario">Application Scenario</h2>
 <p>The bounding box contains the diameter of a hole, with the designer initially setting the hole diameter to &ldquo;10mm.&rdquo; However, the manufacturer&rsquo;s machine tool can only provide a hole of size less than &ldquo;8mm,&rdquo; so the bounding box dimensions are adjusted by manufacturer. This new bounding box is visualized on the designer&rsquo;s end, prompting the designer to adjust the hole diameter to the new range. When multiple constraints (for example the MEP planner suggests a diameter of more than “9mm”) exist for an object, the designer must further consider constraint conflict.
 <img src="/images/pj6-12.webp" alt="Dashboard">
