--- a/public/projects/project7/index.html
+++ b/public/projects/project7/index.html
@@ -158,8 +158,79 @@
     
     <article class="prose prose-neutral max-w-none prose-h2:text-2xl prose-h2:font-bold prose-h2:mt-8 prose-h2:mb-4 lightbox">
       <h2 id="introduction">Introduction</h2>
-<p>This project was part of the SS25 BIM Fundamental Course, aimed at developing a deeper understanding of the potential of Building Information Modeling (BIM) and the structure of the IFC schema. The assignment required us to create a semantically enriched and detailed BIM model, acting simultaneously as designers and engineers. We carefully examined the structure, appearance, and material definitions of the model, ensuring semantic accuracy and consistency throughout. This process not only strengthened our modeling skills but also provided us with a solid foundation in comprehending the logic and framework of IFC-based data representation.</p>
-<p><img src="/images/pj7-3.webp" alt="Dashboard"></p>
+<p>This project is the core practical assignment for the &ldquo;BIM.Fundamentals&rdquo; course in the Summer Term 2025 at the Technical University of Munich (TUM), School of Engineering and Design. The project aims to deeply explore the potential of Building Information Modeling (BIM) and to master the IFC data schema.</p>
+<p>This task requires the creation of a detailed, semantically enriched BIM model that adheres to specific shape requirements. The model&rsquo;s structure, appearance, and material definitions must be strictly defined, ensuring semantic accuracy and data consistency throughout the development process.</p>
+<h2 id="technical-and-execution">Technical and Execution</h2>
+<p>This model strictly adheres to multiple technical specifications, focusing on the logic and framework of IFC data:</p>
+<h3 id="ifc-spatial-structure"><strong>IFC Spatial Structure</strong></h3>
+<ul>
+<li>Established a compliant spatial structure breakdown</li>
+<li>Contains: <strong>IfcProject</strong>,<strong>IfcSite</strong>, <strong>IfcBuilding</strong>, <strong>IfcBuildingStoreys</strong>, <strong>IfcSpaces</strong></li>
+</ul>
+<h3 id="core-building-components"><strong>Core Building Components</strong></h3>
+<ul>
+<li>Fully implemented necessary building elements</li>
+<li>Contains: <strong>Walls</strong>, <strong>Windows</strong> , <strong>Columns</strong>, <strong>Doors</strong>, <strong>Beams</strong>, <strong>Roof</strong>, <strong>Slabs</strong>, <strong>Stairs</strong></li>
+</ul>
+<h3 id="semantic-information"><strong>Semantic Information</strong></h3>
+<p>Accurately attached semantic attributes to enhance model intelligence:</p>
+<ul>
+<li>
+<p><strong><code>LoadBearing</code></strong> (True/False) attribute:</p>
+<ul>
+<li>Applied to load-bearing components (walls, beams, columns)</li>
+<li>Ensures proper structural analysis and design verification</li>
+</ul>
+</li>
+<li>
+<p><strong><code>IsExternal</code></strong> (True/False) attribute:</p>
+<ul>
+<li>Defined for walls and doors</li>
+<li>Distinguishes between internal and external elements</li>
+<li>Supports energy analysis and building performance evaluation</li>
+</ul>
+</li>
+<li>
+<p><strong><code>IfcSpaces</code> properties</strong>:</p>
+<ul>
+<li>All space objects have meaningful names</li>
+<li>Each space includes an <code>Area</code> property in its property sets</li>
+<li>Enables accurate space area calculations and documentation</li>
+</ul>
+</li>
+</ul>
+<h3 id="specific-design-requirements"><strong>Specific Design Requirements</strong></h3>
+<ul>
+<li>
+<p><strong>High-ceiling hall</strong>:</p>
+<ul>
+<li>Designed a training/conference hall spanning at least two stories</li>
+<li>Demonstrates multi-level spatial modeling capabilities</li>
+</ul>
+</li>
+<li>
+<p><strong>Non-structural glazing facade</strong>:</p>
+<ul>
+<li>Applied to one side of the building</li>
+<li>Showcases curtain wall system implementation</li>
+</ul>
+</li>
+<li>
+<p><strong>Furniture placement</strong>:</p>
+<ul>
+<li>Placed appropriate furniture on at least two stories</li>
+<li>Ensured zero geometric clashes with building elements</li>
+</ul>
+</li>
+</ul>
+<h3 id="deliverable-standards"><strong>Deliverable Standards</strong></h3>
+<ul>
+<li>Format: IFC 4 Reference View Model View Definition (MVD)</li>
+<li>Quantities: Base Quantities exported (volume and area)</li>
+<li>Scope: Complete coverage for all building objects and spaces</li>
+</ul>
+<p><img src="/images/pj7-3.webp" alt="Dashboard">
+<em>Figure 1. Open IFC Viewer</em></p>
 <div class="not-prose" 
      style="display: flex; gap: 1rem; margin: 1rem auto; width: 80%; justify-content: center;">
   <div style="flex: 1; text-align: center;">
